--- a/v2.html
+++ b/v2.html
@@ -143,8 +143,8 @@
                </div>
                <div class="absolute z-1 top-230 s:top-0 flex s:items-center justify-center left-0 w-full h-full js-pr" data-speed="-0.5" style="background-image: url('img/welcomebanner.jpg');background-position: center;background-size: cover;">
                   <div class="relative s:text-left w-full px-20 s:-mt-50">
-                     <h1 class="text-70 s:text-135 mb-40 s:mb-30 leading-[1] s:leading-[1.24] font-heading tracking-[-0.04em] js-heading text-white">Elevate<br class="block s:hidden"> <span class="italic">your</span> escape</h1>
-                     <p class="text-24 s:text-28 leading-[1.2] s:max-w-[80rem] pb-50 text-white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata.</p>
+                     <h1 class="text-70 s:text-135 mb-40 s:mb-30 leading-[1] s:leading-[1.24] font-heading tracking-[-0.04em] js-heading text-white">Elevate<br class="block s:hidden"> <span class="italic">your</span> Escape</h1>
+                     <p class="text-24 s:text-28 leading-[1.2] s:max-w-[80rem] pb-50 text-white">Redefine luxury living with modern comfort and nature&#39;s serenity. Experience avant-garde design, flawless amenities, and a lifestyle that lets you embrace tranquility and sophistication.</p>
                   </div>
                </div>
                <!-- static/stone_leaf.png -->
@@ -167,7 +167,7 @@
             </div>
             <div class="col-span-12 s:col-span-7 mt-auto s:mt-0 s:pr-0">
                <div class="text-25 s:text-25 leading-none s:leading-[0.5] s:leading-[0.6] font-heading mb-0 tracking-[-0.03em] js-text-reavel">
-                  Home to one of India’s largest expat populations, Pune is a culturally rich and diverse cosmopolitan city teeming with local flavours and great heritage. Soon emerging into a global hub for business, technology and lifestyle, Pune is seeing high volume of investments in each of these sectors. A culture capital that boasts a pleasant weather year round, nestled in the Western Ghats, the city will charm you with an air of creativity and originality. Long revered for its excellence in education, the city is dawning a new role as the nest for entrepreneurial minds with a boom in the IT commercial space. At Panchshil, our vision has always centred on bringing the very best of the world to Pune, and with Kelly’s icon style and her ‘east meets west’ design philosophy, we offer the finest of lifestyles in yoovillas.
+                  At Panchshil, we are committed to redefining lifestyles by bringing the world’s finest to Pune. In collaboration with the iconic Kelly Hoppen, Yoovillas embodies her signature ‘East meets West’ design philosophy. The result is an exquisite blend of simplicity, sumptuous textures, and luxurious finishes, offering a harmonious sanctuary for modern living. Experience inspiring spaces with sophistication and style at Yoovillas.
                </div>
             </div>
          </div>
@@ -185,7 +185,7 @@
                </div>
                <div class="col-span-12 s:col-span-5 order-2 s:order-1">
                   <div class="pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0">
-                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et.</p>
+                     <p>Pune, long celebrated as India’s cultural and educational capital, has emerged as a global hub for business, technology, and lifestyle. Nestled in the picturesque Western Ghats, the city charms with its rich heritage, vibrant cosmopolitan energy, and pleasant year-round weather, making it a magnet for expats and entrepreneurial minds alike.</p>
                   </div>
                </div>
             </div>
@@ -348,9 +348,10 @@
                   <path id="quote_icon" data-name="quote icon" d="M30.686,2.25h81.83A30.694,30.694,0,0,1,143.2,32.936v81.83a30.694,30.694,0,0,1-30.686,30.686H61.372v40.915a40.953,40.953,0,0,0,40.915,40.915H107.4a15.306,15.306,0,0,1,15.343,15.343V273.31A15.306,15.306,0,0,1,107.4,288.653h-5.114A102.259,102.259,0,0,1,0,186.366V32.936A30.694,30.694,0,0,1,30.686,2.25Zm184.116,0h81.83a30.694,30.694,0,0,1,30.686,30.686v81.83a30.694,30.694,0,0,1-30.686,30.686H245.489v40.915A40.953,40.953,0,0,0,286.4,227.281h5.114a15.306,15.306,0,0,1,15.343,15.343V273.31a15.306,15.306,0,0,1-15.343,15.343H286.4A102.259,102.259,0,0,1,184.116,186.366V32.936A30.694,30.694,0,0,1,214.8,2.25Z" transform="translate(0 -2.25)" fill="#fff" opacity="0.23"/>
                </svg>
                <div class="text-100 s:text-100  leading-[1.2] s:leading-[1.2] font-heading mb-0 tracking-[-0.03em] js-text-reavel text-center">
-                  WE DESIGN MAGNIFICENT SPACES THAT ENRICH PEOPLE'S LIVES IN EVERY POSSIBLE WAY
+                  We design magnificent spaces that enrich people’s lives in every possible way
                </div>
-               <h3 class="text-30 s:text-30  leading-[1.2] s:leading-[1.2] font-heading text-center mt-50">-JOHN HITCHCOX, FOUNDER YOO</h3>
+               <h3 class="text-30 s:text-30  leading-[1.2] s:leading-[1.2] font-heading text-center mt-50"> - John Hitchcox,
+                  Founder, Yoo.</h3>
             </div>
          </div>
          <div class="varianttabs relative bg-white w-full mt-auto">
@@ -368,7 +369,7 @@
                               </div>
                               <div class="licntnt">
                                  <p>
-                                    Configuration: 4BHK
+                                    Configuration: 5BHK
                                  </p>
                               </div>
                            </div>
@@ -382,7 +383,7 @@
                               </div>
                               <div class="licntnt">
                                  <p>
-                                    Carpet Area: 477.67sq.m
+                                    Carpet Area: 884.24 sq.m.
                                  </p>
                               </div>
                            </div>
@@ -396,7 +397,7 @@
                               </div>
                               <div class="licntnt">
                                  <p>
-                                    Covered Parking: 02
+                                    Covered Parking: 4
                                  </p>
                               </div>
                            </div>
@@ -410,7 +411,7 @@
                               </div>
                               <div class="licntnt">
                                  <p>
-                                    Staff Quarters: 01
+                                    Staff Quarters: 2
                                  </p>
                               </div>
                            </div>
@@ -428,8 +429,11 @@
                         <div class="tabitem"><span class="flex p-13 borderbtn px-35 text-face tab" data-villa="villa-3">Villa 3</span></div>
                      </li>
                   </ul>
-                  <div class="pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0">
-                     <p>The lavish and spacious V2 Luxury Villas are located along the water body and overlook the lush green ‘Central Park’. These well-appointed homes are equipped with all the amenities to usher in a luxurious way of living and enjoy a wonderful spatial experience. Teamed with warm and inviting interiors, these dramatic high-ceiling homes with plenty of lounging spaces, will make you look forward to coming back home.</p>
+                  <div class="villa-2 villacontent pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0">
+                     <p>The opulent V2 Luxury Villas are thoughtfully situated along a serene water body, offering stunning views of the lush green ‘Central Park.’ These spacious homes are designed to redefine luxury living, blending modern amenities with unparalleled comfort and style. Each villa creates a haven of relaxation and elegance, featuring dramatic high ceilings, expansive lounging areas, and warm, inviting interiors. A perfect retreat, these well-appointed residences promise a lifestyle that makes every homecoming truly special.</p>
+                  </div>
+                  <div class="villa-3 villacontent pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0" style="display: none;">
+                     <p>Cloaked in familial warmth, the V3 Villas provide a serene retreat where contemporary living meets natural beauty. Thoughtfully designed with functional and eclectic touches, these well-appointed homes feature beautifully landscaped front and rear yards, nestled along a verdant boulevard. The elegant V3 Luxury Villas exude warmth and comfort, offering the perfect blend of modern luxury with a connection to nature.</p>
                   </div>
                </div>
             </div>
@@ -609,7 +613,7 @@
                </div>
                <h2 class="js-t-animation pt-120 s:pt-0 pb-10 text-50 s:text-80 text-center font-heading leading-none tracking-[-0.03em] max-w-[30rem] s:max-w-full">Features &  Aminities</h2>
                <div class="pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0 text-center">
-                  <p>The lavish and spacious V2 Luxury Villas are located along the water body and overlook the lush green ‘Central Park’. These well-appointed homes are equipped with all the amenities to usher in a luxurious way of living and enjoy a wonderful spatial experience. Teamed with warm and inviting interiors, these dramatic high-ceiling homes with plenty of lounging spaces, will make you look forward to coming back home.</p>
+                  <p>The Panchshil Club is a true embodiment of refined elegance and modern indulgence. Located in the heart of YOO Villas, The Panchshil Club offers the perfect blend of urban sophistication and luxury lifestyle experiences. Designed by Kelly Hoppen, the Club features a gourmet restaurant, salon, fitness center, swimming pool, yoga room, tennis court, and kids’ play area. It also provides practical amenities like a business center and convenience store.</p>
                </div>
             </div>
          </div>
@@ -655,11 +659,11 @@
 					<div class="grid grid-cols-12">
 						<div class="col-span-12 s:col-span-8">
 							<div class="uppercase text-25 flex">
-								<span class="block text-white">Lorem Ipsum</span>
+								<!-- <span class="block text-white">Lorem Ipsum</span> -->
 							</div>
 							<h2 class="js-t-animation text-white pt-120 s:pt-0 pb-10 text-60 s:text-80 font-heading leading-none tracking-[-0.03em] max-w-[30rem] s:max-w-full">INTERIOR PALETTES</h2>
 							<div class="txt text-22 pr-20 s:pr-100 pl-40 s:pl-0 text-white leading-[1.5]">
-								<p class="">You can choose from our select range of interiors designed by Britain’s most celebrated interior designer, Kelly Hoppen MBE. Hoppen’s collaboration with YOO offers residents of yoovillas a fusion of simplicity with a balance of sumptuous textures and luxurious finishes. We offer you three unique interior style options, each of which reflects Kelly’s ever-evolving original style, underpinned by clean lines and neutral tones, blended with charming launch and sumptuous opulence.</p>
+								<p class="">Take your pick from an exclusive range of interiors curated by Britain’s renowned designer, Kelly Hoppen MBE. In collaboration with YOO, Hoppen brings a harmonious fusion of simplicity, luxurious textures, and refined finishes. Three distinctive interior styles are available, each showcasing her signature aesthetic of clean lines, neutral tones, and a seamless blend of understated elegance and timeless opulence.</p>
 							</div>
 						</div>
 					</div>
@@ -678,8 +682,14 @@
 							   <div class="tabitem" ><span data-image="vintage" class="flex p-13 borderbtn px-35 text-white border-face tab">Vintage</span></div>
 							</li>
 						 </ul>
-						 <div class="contentgrp text-white leading-[1.5] mb-40">
-							<p>The Urban Palette is created using taupe stone, dark timber flooring as well as delectable plaster finishes and textiles, which makes for an interior rooted in minimalism and evincing class. The fine-tuned and idiosyncratic approach, accorded with feature lighting weaves timeless elegance in the marrow of the interior. The linear muted tones and use of repeated motifs is Kelly Hoppen's trademark for YOO's bespoke work that reflects panache.</p>
+						 <div class="urban contentgrp text-white leading-[1.5] mb-40">
+							<p>The Urban Palette features taupe stone, dark timber flooring, and exquisite plaster finishes with rich textiles, creating interiors rooted in minimalism and timeless sophistication. Accentuated by thoughtfully curated feature lighting, this fine-tuned design approach infuses elegance into every detail. Kelly Hoppen’s signature touch is evident in the muted linear tones, repeated motifs, and bespoke elements that seamlessly reflect YOO&#39;s distinctive panache.</p>
+						 </div>
+						 <div class="breeze contentgrp text-white leading-[1.5] mb-40" style="display: none;">
+							<p>The Sea Breeze style infuses interiors with a refreshing vitality, creating an atmosphere of effortless comfort. This palette blends bleached woods, crisp linen textures, white lacquered oak, and taupe-hued glass to craft a light and inviting ambiance. Textured mirrors and polished nickel ironmongery, paired with clear-cut glass accents, elevate the design with understated elegance. Synonymous with simplicity, the Sea Breeze Palette brings a timeless sense of freshness that resonates throughout the day.</p>
+						 </div>
+						 <div class="vintage contentgrp text-white leading-[1.5] mb-40" style="display: none;">
+							<p>The Vintage Palette embodies a seamless blend of modern luxury and timeless charm. Reclaimed timber paired with black granite stone creates striking floor runners, while rich marble and silk textures evoke an air of refined opulence. Patterned and textured stone, complemented by taupe-hued glass and bronze finishes, adds a touch of sophistication and understated elegance. With its warm, evocative character, the Vintage Palette interiors are imbued with a sense of personal connection.</p>
 						 </div>
 					</div>
 				</div>
@@ -1415,7 +1425,7 @@
             <div class="max-w-[28rem] s:max-w-full">
                <h2 class="font-heading mb-110 s:mb-36 text-50 s:text-80 leading-[1.08] tracking-[-0.03em] js-t-animation">About Panchshil</h2>
                <div class="txt max-w-[90rem]">
-                  <p class="mb-0">Established in 2002, Panchshil Realty is one of India's finest luxury real estate developers. Renowned for its leadership and excellence in real estate development, the company has successfully delivered over 28 million sq. ft. of prime real estate, with another 17.5 million sq. ft. under development across multiple asset classes. Panchshil's portfolio spans across office parks, high-end residential developments, luxury hotels and retail malls. The company’s developments comprise some key landmarks of ‘Tomorrow’s Pune’, such as India’s first Trump branded residences – Trump Towers Pune, yoopune by Philippe Starck and John Hitchcox, EON Free Zone in Kharadi, International Convention Centre, World Trade Center Pune, and an award-winning built-to-suit office campus for Cummins India amongst others.</p>
+                  <p class="mb-0">Panchshil Realty has been leading the real estate mixed-use luxury developer since 2002. Renowned for its iconic and award-winning real estate development, Panchshil has successfully delivered over 31.7 million sq. ft. of prime real estate, with 27.6 million sq. ft. under development across multi- asset classes in India, Sri Lanka, and the Maldives. Panchshil has played a significant role in putting Pune on the world map and added to its growing global identity through its portfolio that includes high-end residential developments, IT parks, built- to-suit office spaces, and special economic zones (SEZ), hotels, convention centres, luxury retail malls, and landmark hospitality developments. A recipient of multiple awards in luxury homes and office space development, its portfolio of architecturally significant properties, from innovative ground-up developments to revitalized landmarks that define skylines in India includes yoopune by Philippe Starck; Trump Towers Pune, EON Free Zone, Kharadi; the International Convention Centre, South Asia’s largest trade and convention centre, and World Trade Center Pune.</p>
                   
                </div>
             </div>
@@ -1646,7 +1656,9 @@
   
 		// Hide all villa contents and show the selected one
 		$('.villa-content').hide();
-		$('#' + $(this).data('villa')).show();      
+      $('.villacontent').hide();
+		$('#' + $(this).data('villa')).show(); 
+		$('.' + $(this).data('villa')).show();           
       $('.fillslider').slick('refresh');
 	  });
 	});
@@ -1658,7 +1670,9 @@
   
 		// Hide all villa contents and show the selected one
 		$('.imgcontent').hide();
-		$('#' + $(this).data('image')).show();  
+      $('.contentgrp').hide();
+		$('#' + $(this).data('image')).show(); 
+      $('.' + $(this).data('image')).show(); 
 	  });
 	});
    $(window).on('scroll', function() {
