--- a/v2.html
+++ b/v2.html
@@ -190,9 +190,10 @@
                </div>
             </div>
          </div>
-         <div class="map">
+         <!-- <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.5816026172306!2d73.96229347372119!3d18.547800068344863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c1064da46bad%3A0xe6d958c42fa854a7!2sYOO%20Villas%20-%20Wagholi!5e0!3m2!1sen!2sin!4v1732537485933!5m2!1sen!2sin" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-         </div>
+         </div> -->
+         <div id="map" style="height: 650px;"></div>
          <div class="gogglelisting">
             <div class="t-n-t gutter">
                <div class="listwrapper">
@@ -1561,6 +1562,23 @@
 <div class="contactfix">
     <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> CONTACT</a>
 </div>    
+
+<script>
+   function initMap() {
+       // Map options
+       const options = {
+           zoom: 8,
+           center: { lat: 18.5679, lng: 73.9864 } // San Francisco, for example
+       };
+       // Create the map
+       const map = new google.maps.Map(document.getElementById('map'), options);
+   }
+</script>
+<script 
+    async
+    defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjdqOj9aoHkCRGr9HzGzcwv7ZVjKaqkZI&callback=initMap">
+</script>
 <script type="text/javascript" src="dist/app-f1a7d0c2235b21cbe978.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
