--- a/v2.html
+++ b/v2.html
@@ -2032,13 +2032,13 @@ ul.flex.footermenu {
     padding-bottom: 30px;
 }
 
-.slide-item img {
+.fillslider  .slide-item img {
     object-fit: contain !important;
     object-position: center !important;
     bottom: 0;
 }
 
-.slide-item  figure.overflow-hidden.h-full.min-h-\[32rem\].max-h-\[32rem\].s\:min-h-\[80rem\].s\:max-h-\[80rem\].relative.js-image-scale {min-height: 600px;}
+.fillslider .slide-item  figure.overflow-hidden.h-full.min-h-\[32rem\].max-h-\[32rem\].s\:min-h-\[80rem\].s\:max-h-\[80rem\].relative.js-image-scale {min-height: 600px;}
 }
 .nav-inner svg, .nav-inner svg path, .nav-inner ul li a {
     fill: #fff !important;
