--- a/v2.html
+++ b/v2.html
@@ -1694,6 +1694,15 @@
 		slidesToShow: 1,
 		slidesToScroll: 1,
       infinite: true,variableWidth: false,
+   	responsive: [
+   		{
+   			breakpoint: 480,
+   			settings: {
+   				centerMode: true,
+   				centerPadding: "10px"
+   			}
+   		}
+   	]
 	});
 </script>
 <script>
@@ -2039,6 +2048,55 @@ ul.flex.footermenu {
 }
 
 .fillslider .slide-item  figure.overflow-hidden.h-full.min-h-\[32rem\].max-h-\[32rem\].s\:min-h-\[80rem\].s\:max-h-\[80rem\].relative.js-image-scale {min-height: 600px;}
+.fillslider {
+    padding-top: 0px;
+}
+
+.mobilemargin  .scale-grid-content.js-scale {
+    margin-top: 30px;
+}
+
+.varianttabs {
+    padding-top: 40px;
+}
+
+.varianttabs  h2.js-t-animation.pt-120.s\:pt-0.pb-10.text-50.s\:text-80.font-heading.leading-none.tracking-\[-0\.03em\].max-w-\[30rem\].s\:max-w-full {
+    max-width: 100%;
+    text-align: center;
+}
+.fillslider {
+    padding-top: 0px;
+}
+
+.mobilemargin  .scale-grid-content.js-scale {
+    margin-top: 30px;
+}
+
+.varianttabs {
+    padding-top: 40px;
+}
+.contactfix {
+   z-index: 111;
+}
+.varianttabs  h2.js-t-animation.pt-120.s\:pt-0.pb-10.text-50.s\:text-80.font-heading.leading-none.tracking-\[-0\.03em\].max-w-\[30rem\].s\:max-w-full {
+    max-width: 100%;
+    text-align: center;
+}
+.varianttabs h2 .line {
+    text-align: center !important;
+    margin: 0 4px;
+}
+ul.tabs.flex {
+    justify-content: center;
+}
+.villacontent {
+    padding-right: 0;
+    text-align: center;
+}
+.varianttabs h2 .line {
+    text-align: center !important;
+    margin: 0 4px;
+}
 }
 .nav-inner svg, .nav-inner svg path, .nav-inner ul li a {
     fill: #fff !important;
