--- a/v2.html
+++ b/v2.html
@@ -1560,7 +1560,7 @@
 </div>
 <div class="fixed inset-0 z-[100] pointer-events-none js-pe"></div>
 <div class="contactfix">
-    <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> CONTACT</a>
+    <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> <span>CONTACT</span></a>
 </div>    
 
 <script>
@@ -2096,6 +2096,9 @@ ul.tabs.flex {
 .varianttabs h2 .line {
     text-align: center !important;
     margin: 0 4px;
+}
+.contactfix a span {
+   display: none;
 }
 }
 .nav-inner svg, .nav-inner svg path, .nav-inner ul li a {
