--- a/v2.html
+++ b/v2.html
@@ -2100,6 +2100,12 @@ ul.tabs.flex {
 .contactfix a span {
    display: none;
 }
+.contactfix {
+   width: auto;
+}
+.contactfix i {
+   margin-right: 0px;
+}
 }
 .nav-inner svg, .nav-inner svg path, .nav-inner ul li a {
     fill: #fff !important;
