--- a/v2.html
+++ b/v2.html
@@ -64,7 +64,7 @@
       <nav class="hidden s:block">
          <ul class="uppercase text-17 flex gap-x-28">
             <li>
-               <a class="walkthroughs relative pointer-events-auto flex justify-center " href="#walkthrough">
+               <a class="walkthroughs relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Walkthrough</span>
                </a>
             </li>
@@ -1947,6 +1947,9 @@ footer {
 	}
    ul.featurekeybd {
       width: 100%;
+   }
+   .mobilemargin.scale-grid.js-scale-grid.px-20.s\:px-0 {
+    height: 660px;
    }
    .scale-grid-item.js-scale-ref.middlemobimg {
     width: 540px;
