--- a/v2.html
+++ b/v2.html
@@ -64,22 +64,22 @@
       <nav class="hidden s:block">
          <ul class="uppercase text-17 flex gap-x-28">
             <li>
-               <a class="walkthroughs relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="walkthroughs" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Walkthrough</span>
                </a>
             </li>
             <li>
-               <a class="amenitiess relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="amenitiess" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Amenities</span>
                </a>
             </li>
             <li>
-               <a class="variantss relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="variantss" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Variants</span>
                </a>
             </li>
             <li>
-               <a class="enquires relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="enquires" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>ENQUIRE</span>
                </a>
             </li>
@@ -97,22 +97,22 @@
                </a>
             </li>
             <li class="w-full">
-               <a class="walkthroughs relative pointer-events-auto flex" href="javascript:;">
+               <a data-link="walkthroughs" class="relative pointer-events-auto flex" href="javascript:;">
                <span>Walkthrough</span>
                </a>
             </li>
             <li class="w-full">
-               <a class="amenitiess relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="amenitiess" class="relative pointer-events-auto flex " href="javascript:;">
                <span>Amenities</span>
                </a>
             </li>
             <li class="w-full">
-               <a  class="variantss relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="variantss"  class="relative pointer-events-auto flex " href="javascript:;">
                <span>Variants</span>
                </a>
             </li>
             <li class="w-full">
-               <a class="enquires relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="enquires" class="relative pointer-events-auto flex " href="javascript:;">
                <span>ENQUIRE</span>
                </a>
             </li>
@@ -1562,7 +1562,7 @@
 				<div class="footerright pb-30 pt-30 flex justify-between items-center">
 					<div class="s:col-span-6">
 						<ul class="flex footermenu">
-							<li><a href="">Project Financed by Standard Chattered</a></li>
+							<li><a href="">Project Financed by Standard chartered</a></li>
 							<li><a href="">Privacy Policy</a></li>
 							<li><a href="">Disclaimer</a></li>
 						</ul>
@@ -1705,6 +1705,22 @@
             'slow');
       });
    });
+   $("header ul li a").click(function (e) {
+       e.preventDefault(); // Prevent default anchor behavior
+
+       // Get the value of the 'data-link' attribute
+       var target = $(this).data("link");
+
+       // Scroll to the target section
+       $('html, body').animate({
+           scrollTop: $("." + target).offset().top
+       }, 'slow');
+
+       // Add 'active' class to the clicked link and remove it from others
+       $("header ul li a").removeClass("active");
+       $(this).addClass("active");
+   });
+
 </script>
 <script>
    $('.fillslider').slick({
